Ajuste index.html

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="col-12">
-                    <span class="ml-4 text-info cursor-pointer" id="add-endereco" title="Adicionar endereço">Adicionar endereço(s)</span>
+                    <button type="button" class="btn btn-info" id="add-endereco" title="Adicionar endereço"><i class="fas fa-plus mr-1"></i>Adicionar endereço(s)</button>
                 </div>
 
                 <div class="row d-none ml-4" id="content-enderecos">
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="col-12 ml-1 mt-1">
-                    <button class="btn btn-success" type="button" id="btn-confirmar"><i class="fas fa-save"></i> Confirmar</button>
+                    <button class="btn btn-success" type="button" id="btn-confirmar"><i class="fas fa-save"></i> Confirmar cadastro</button>
                 </div>
             </form>
         </div>
